tests/baselines/reference/decoratorOnFunctionParameter.errors.txt
decoratorOnFunctionParameter.ts(5,17): error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.
decoratorOnFunctionParameter.ts(6,17): error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.


==== decoratorOnFunctionParameter.ts (2 errors) ====
    declare const dec: any;
    
    class C { n = true; }
    
    function direct(@dec this: C) { return this.n; }
                    ~~~~
!!! error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.
    function called(@dec() this: C) { return this.n; }
                    ~~~~~~
!!! error TS1433: Neither decorators nor modifiers may be applied to 'this' parameters.